--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 h1,h2,h3{
     font-weight: 300;
 }
@@ -20,22 +21,26 @@ h1,h2,h3{
     height: auto;
     width: 100vw;
     position: absolute;
-    
+
     font-family: "quasimoda", sans-serif;
     font-weight: 100;
     font-style: normal;
+    transition: background-color 0.5s ease;
 }
 
-
+.headerPlaceHolder{
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
 .header{
     height: 8vh;
     background-color: #126889;
     color: #EDED14;
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    position: sticky;
-    top: 0;
     z-index: 100;
+    
 }
 
 .header-left, .header-center, .header-right {
@@ -69,7 +74,6 @@ h1,h2,h3{
 .main-container{
     height:92vh;
     width: 100vw;
-    background-color: #F9F7F2;
     position: relative;
     padding: 4vw;
     display: grid;
@@ -85,49 +89,40 @@ h1,h2,h3{
 
 .content-container,
 .about-container{
-    height:auto;
     min-height: 92vh;
-    width: 100vw;
-    background-color: #F9F7F2;
     position: relative;
-    padding: 4vw;
+    height:auto;
 }
+
 
 /* about me */
 
 .aboutMe{
     height: auto;
-    background-color: #323F2F;
+    /* background-color: #323F2F; */
 }
 .about-container{
+    padding: 4vw;
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    background-color: #323F2F;
+    /* background-color: #323F2F; */
 }
 
 .about-title {
     font-size: 200%;
-    color: #FFD2FF;
+    color: #EDED14;
     height: auto;
     width: auto;
 }
 .blurEffect{
-    height: 4vw;
+    height: 6vw;
     position: sticky;
-    z-index: 10;
-    top: 4vh;
+    z-index: 5;
+    top: 5vh;
     width: 100vw;
-
-    /* backdrop-filter: blur(1.6rem);  */
-
-    filter: blur(1.1rem);
-    background-color: #323F2F;
-    
-    
-    
-
-   
-
+    opacity: 0;
+    filter: blur(1rem);
+    background-color: #126889;
 }
 
 
@@ -138,11 +133,7 @@ h1,h2,h3{
 }
 
 
-
-
-
 .about-content{
-    background-color: #323F2F;
     color: #AAA7A2;
     line-height: 200%;
     font-size: 150%;
@@ -154,21 +145,12 @@ h1,h2,h3{
     margin-bottom: 10vh;
 }
 #profilePic{
-    width: 60%;
+    width: 40%;
 }
 /* // */
 
 .back-button{
-    position: absolute;
-    background-color: antiquewhite;
-    top: 3vw;
-    left: 3vw;
-    height: 4vh;
-    width: 6vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 7px;
+
 
 }
 
@@ -302,7 +284,9 @@ h1,h2,h3{
     gap: 3vw;
     z-index: 10;
 }
-
+#intro-contact h2 {
+    margin-bottom: 0;
+}
 .introduction{
     color:#AAA7A2;
 }
@@ -311,16 +295,87 @@ h1,h2,h3{
     font-size: 2rem;
     z-index: 3;
 }
-#intro-contact h2:hover{
-    color: #EDED14;
+
+/* .buttonPlaceHolder{
+    width: auto;
+    position: absolute;
+    height: fit-content;
+    background-color: #F9F7F2;
+    width: fit-content;
+} */
+
+/* button animation */
+.button {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    width: auto;  
+    height: fit-content;
+    position: relative;
+    white-space: nowrap;
+    margin-top: auto;
+    margin-bottom: auto;
 
 }
+
+.button-expand{
+    position: absolute;
+    height: 100%;
+    width: 0;
+    transition: width ease 0.7s;
+
+}
+
+.buttonContent{
+    position:relative;
+    height: inherit;
+    width: inherit;
+    padding-left: 1vh;
+    padding-right: 1vh;
+    z-index: 10;
+    color: #FFD2FF;
+}
+
+
+
+.backToTop{
+    width: fit-content;
+    place-self: center;
+    margin-bottom: 10vh;
+    z-index: 10;
+}
+
+
+.buttonText{
+    width: 10vw;
+    height: 6vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+
+.buttonContainer{
+    position: absolute;
+    transition: width 0.5s;
+    z-index: 10;
+    /* overflow: hidden; */
+}
+
+
+
+.buttonContainer:hover{
+    width: 10vw;
+}
+
 
 
 .footer{
     height:auto;
     width: 100vw;
-    background-color: #126889;
+    background-color: #AAA7A2;
     position: relative;
     display: grid;
     grid-template-columns: repeat(2,1fr);
@@ -340,7 +395,7 @@ h1,h2,h3{
 }
 .contact-info h2 {
     margin-bottom: 2vh;
-    font-size: 200%;
+    font-size: 150%;
 }
 
 
@@ -359,7 +414,7 @@ h1,h2,h3{
     right: 0;
     margin-right: 4vw;
     margin-bottom: 3vh;
-    color:#EDED14;
+    color:#323F2F;
 }
 
 
@@ -375,4 +430,37 @@ h1,h2,h3{
 
 .contact-info .link a:hover {
     color: #EDED14; 
+}
+
+.backBtn {
+    position: absolute;
+    z-index: 10;
+    margin-left: 4vw;
+    margin-top: 2vh;
+}
+
+#doorContainer {
+    text-align: center;
+    background-color: antiquewhite;
+    min-height: 92vh;
+    width: 100vw;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    overflow-x: scroll;
+ 
+}
+
+.doorCarousel{
+    background-color: #AAA7A2;
+    width: 200vw;
+    height: 80vh;
+    position: absolute;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+#doorImage{
+    width: 20vw;
+    height: auto;
 }
