--- a/style.css
+++ b/style.css
@@ -437,30 +437,100 @@ h1,h2,h3{
     z-index: 10;
     margin-left: 4vw;
     margin-top: 2vh;
+
 }
 
 #doorContainer {
     text-align: center;
-    background-color: antiquewhite;
+    background-color: #F9F7F2;
     min-height: 92vh;
     width: 100vw;
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-end;
     overflow-x: scroll;
- 
+    gap: 10vw;
+    transition: ease 0.5s;
+    padding-left: 40vw;
 }
+
+.project{
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
+
+.project {
+    width: auto;
+    min-width: 250px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    padding: 10px;
+    margin: 10px; 
+}
+
+.project h3 {
+    white-space: nowrap;
+    overflow: hidden;
+}
+
 
 .doorCarousel{
     background-color: #AAA7A2;
-    width: 200vw;
+    width: auto;
     height: 80vh;
     position: absolute;
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
+    gap:10vw;
 }
-#doorImage{
+.doorImage{
     width: 20vw;
     height: auto;
+    background-color: #EDED14;
+    transition: opacity 5s;
+    position: absolute;
+
+}
+
+.eachDoor{
+    transition:  ease 0.5s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+
+
+}
+
+.stickyDoor{
+    position: sticky;
+    left: 40vw;
+}
+
+.thumbnailContainer{
+    position:absolute;
+    z-index: 100;
+    width: 100%;
+    height: 80%;
+    display: none;
+    padding-top: 10vh;
+
+
+    
+}
+
+.thumbnailPic{
+    width: 20vw;
+    height: auto;
+    
+}
+
+.materialList{
+    text-align: center;
+    list-style-type:none
 }
