--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+html, body {
+    scroll-behavior: smooth;
+    height: 100%;
+    margin: 0;
+}
 
 h1,h2,h3{
     font-weight: 300;
@@ -21,7 +26,6 @@ h1,h2,h3{
     height: auto;
     width: 100vw;
     position: absolute;
-
     font-family: "quasimoda", sans-serif;
     font-weight: 100;
     font-style: normal;
@@ -31,7 +35,7 @@ h1,h2,h3{
 .headerPlaceHolder{
     position: sticky;
     top: 0;
-    z-index: 10;
+    z-index: 105;
 }
 .header{
     height: 8vh;
@@ -148,11 +152,6 @@ h1,h2,h3{
     width: 40%;
 }
 /* // */
-
-.back-button{
-
-
-}
 
 .directory-title1,.directory-title2,.directory-title3,.directory-title4{
     display: none;
@@ -316,7 +315,12 @@ h1,h2,h3{
     white-space: nowrap;
     margin-top: auto;
     margin-bottom: auto;
+    z-index: 1000;
 
+}
+
+.button h3{
+    font-size: 1.3rem;
 }
 
 .button-expand{
@@ -443,37 +447,36 @@ h1,h2,h3{
 #doorContainer {
     text-align: center;
     background-color: #F9F7F2;
-    min-height: 92vh;
+    height: 92vh;
     width: 100vw;
     display: flex;
     justify-content: flex-start;
-    align-items: flex-end;
+    align-items: center;
     overflow-x: scroll;
+    overflow-y: hidden;
     gap: 10vw;
     transition: ease 0.5s;
     padding-left: 40vw;
+    padding-right: 40vw;
+
+
 }
 
-.project{
-    width: fit-content;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-}
 
 .project {
     width: auto;
-    min-width: 250px;
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
-    padding: 10px;
-    margin: 10px; 
+    z-index: 100;
+    margin-top: 150vh;
+    text-align: end;
+    line-height: 300%;
+    transition:  ease 0.5s;
 }
 
 .project h3 {
-    white-space: nowrap;
     overflow: hidden;
+    font-size: 250%;
 }
 
 
@@ -490,47 +493,124 @@ h1,h2,h3{
 .doorImage{
     width: 20vw;
     height: auto;
-    background-color: #EDED14;
-    transition: opacity 5s;
+    transition: ease 0.5s;
     position: absolute;
+ 
 
 }
 
 .eachDoor{
-    transition:  ease 0.5s;
+    transition: ease 0.5s;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    text-align: center;
     position: relative;
-
-
+    min-width: 20vw;
+    min-height: 80vh;
+    z-index: 51;
 }
 
-.stickyDoor{
+/* .stickyDoor{
     position: sticky;
     left: 40vw;
-}
+} */
 
 .thumbnailContainer{
     position:absolute;
-    z-index: 100;
     width: 100%;
     height: 80%;
     display: none;
-    padding-top: 10vh;
-
-
-    
+    padding-top: 10vh; 
+    transition:  opacity ease 1s;
 }
 
 .thumbnailPic{
+    padding: 3vh;
     width: 20vw;
-    height: auto;
-    
+    max-height: 30vh;
+    object-fit: contain;
+
 }
 
 .materialList{
     text-align: center;
-    list-style-type:none
+    list-style-type:none;
+    width: 100%;
+    align-items: center;
+    /* margin-top: 2vh; */
+}
+
+/* .spotlight{
+    height: 80vh;
+    width: 20vw;
+    background-color: tomato;
+    position: absolute;
+    z-index: 50;
+    place-self: center;
+    
+} */
+
+/* .distanceDisplay {
+    font-family: Arial, sans-serif;
+    text-align: center;
+} */
+
+.eachDoor.blurred {
+    filter: blur(3px);
+}
+
+.eachDoor.hovered {
+    filter: none;
+}
+
+#project-info-container{
+    min-height: 92vh;
+    box-sizing: border-box;
+    padding: 5vw;
+    background-color: #F9F7F2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#projectPhotoBanner{
+    width: 100%;
+    height: 40vh;
+    background-color: #AAA7A2;
+}
+
+#content,
+#content-buttons{
+    display: grid;
+    height: 30vh;
+    width: 100%;
+    grid-template-columns: repeat(3,1fr);
+    background-color: #EDED14;
+    gap: 2vh;
+    margin: 2vh;
+
+}
+.content-center,
+.content-left,
+.content-right{
+    padding: 4vw;
+}
+
+.content-left{
+    background-color: #323F2F;
+
+}
+
+.content-center{
+    background-color: #323F2F;
+    
+}
+.content-right{
+    background-color: #323F2F;
+    
+}
+
+.titleProject{
+    z-index: 100;
 }
