--- a/style.css
+++ b/style.css
@@ -2,7 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
+      
 }
+/* 
+::-webkit-scrollbar {
+    display: none;
+} */
 
 html, body {
     scroll-behavior: smooth;
@@ -21,9 +27,8 @@ h1,h2,h3{
     color: #126889;
 }
 
-
-.page-container{
-    height: auto;
+.landing-page-container{
+    height: 200vh;
     width: 100vw;
     position: absolute;
     font-family: "quasimoda", sans-serif;
@@ -31,11 +36,18 @@ h1,h2,h3{
     font-style: normal;
     transition: background-color 0.5s ease;
 }
+.page-container{
+    height: auto;
+    width: 100vw;
+    position: absolute;
+    transition: background-color 0.5s ease;
+}
 
 .headerPlaceHolder{
     position: sticky;
     top: 0;
     z-index: 105;
+    
 
 }
 .header{
@@ -104,6 +116,7 @@ h1,h2,h3{
 
 .aboutMe{
     height: auto;
+    background-color: #323F2F;
     /* background-color: #323F2F; */
 }
 .about-container{
@@ -142,13 +155,36 @@ h1,h2,h3{
     color: #AAA7A2;
     line-height: 200%;
     font-size: 150%;
+
 }
 
 
 
-.about-content h2{
-    margin-bottom: 10vh;
+.about-content h2,
+.about-content p{
+    margin-bottom: 5vh;
 }
+
+#about-paragraph{
+    border-bottom: 1px solid #bbb;
+    padding-bottom: 5vh;
+}
+
+#skills{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    width: 100%;
+    height: auto;
+    font-size: 80%;
+    gap: 2vw;
+}
+
+.skill-title{
+    font-size: 150%;
+    text-decoration-line: underline;
+    text-decoration-thickness: 1px;
+}
+
 #profilePic{
     width: 40%;
 }
@@ -390,7 +426,8 @@ h1,h2,h3{
     padding-left: 4vw;
     padding-bottom:5vw;
     gap: 10px;
-
+    position: relative;
+    top:500vh;
     
 }
 .contact-title h1{
@@ -441,25 +478,51 @@ h1,h2,h3{
     z-index: 100;
     margin-left: 4vw;
     margin-top: 2vh;
-
-
 }
 
 #doorContainer {
     text-align: center;
-    background-color: #FFD2FF;
     height: 92vh;
-    width: 100vw;
+    width: auto;
+    
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    overflow-x: scroll;
-    overflow-y: hidden;
     gap: 10vw;
     transition: ease 0.5s;
     padding-left: 40vw;
     padding-right: 40vw;
+    
 }
+
+.stickyParent{
+    height: 500vh;
+}
+
+.sticky{
+    overflow: hidden;
+    position:sticky;
+    top:8vh;
+    height: 100vh;
+    border: #323F2F solid 1px;
+}
+
+
+.scrollSection {
+    position: absolute;
+    top: 0;
+    display: flex; 
+    width: max-content;
+    will-change: transform;
+}
+
+.headerTest{
+    height: 8vh;
+    background-color: #323F2F;
+    position: absolute;
+
+}
+
 
 
 .scrollNotice{
@@ -517,7 +580,6 @@ h1,h2,h3{
     min-width: 20vw;
     min-height: 80vh;
     z-index: 51;
-
 }
 
 .thumbnailContainer{
@@ -527,13 +589,18 @@ h1,h2,h3{
     display: none;
     padding-top: 10vh; 
     transition:  opacity ease 1s;
+ 
+
+    
 }
+
 
 .thumbnailPic{
     padding: 3vh;
     width: 20vw;
     max-height: 30vh;
     object-fit: contain;
+    color: #126889;
 
 }
 
@@ -569,6 +636,7 @@ h1,h2,h3{
     filter: none;
 }
 
+
 #project-info-container{
     min-height: 92vh;
     box-sizing: border-box;
@@ -578,6 +646,7 @@ h1,h2,h3{
     flex-direction: column;
     align-items: center;
 }
+
 
 #projectPhotoBanner{
     width: 100%;
@@ -610,29 +679,23 @@ h1,h2,h3{
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 1;
     width: 100%;
-    height: 20vh;
+    height: auto;
     position: relative;
 }
 
-#content-buttons * {
-    place-self: center;
+.progressPhoto{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1vw;
 }
 
 
-/* .content-left{
-    background-color: #323F2F;
-
+.documentationImage,
+.documentationVideo{
+    width: 18vw;
+    height: auto;
+    object-fit: contain;
 }
-
-.content-center{
-    background-color: #323F2F;
-    
-}
-.content-right{
-    background-color: #323F2F;
-    
-} */
-
 
 .titleProject{
     z-index: 100;
@@ -657,3 +720,50 @@ h1,h2,h3{
     font-weight: 100px;
     position: relative;
 }
+
+
+.test{
+    color: #323F2F;
+    height: 30px;
+    z-index: 500;
+}
+
+
+.headerButton{
+    display: flex;
+    flex-direction: row;
+    gap:2vw;
+}
+
+.headerButton *:hover{
+    color: #323F2F;
+}
+
+.clickIndicator{
+    position: absolute;
+    z-index: 5000;
+    left: 10vw;
+    top: 20vh;
+    font-size: 250%;
+    transition: ease;
+
+}
+
+
+.imageShake{
+        animation: shake 0.5s;
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
