--- a/style.css
+++ b/style.css
@@ -45,8 +45,6 @@ h1,h2,h3{
     position: sticky;
     top: 0;
     z-index: 105;
-    
-
 }
 .header{
     height: 8vh;
@@ -55,7 +53,8 @@ h1,h2,h3{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     z-index: 100;
-    
+    width: 100vw;
+    font-size: 1rem;
 }
 
 .header-left, .header-center, .header-right {
@@ -64,11 +63,12 @@ h1,h2,h3{
     box-sizing: border-box;
     padding-left: 4vw;
     padding-right: 4vw;
+    
    
 }
 
 .header-left{
-    justify-content: left;
+    justify-content: flex-start;
 }
 
 .header-center{
@@ -76,12 +76,12 @@ h1,h2,h3{
 
 }
 .logo-img{
-    height: 5vh;
-    width: auto;
+    width: 30%;
+    height: auto;
 }
 
 .header-right{
-    justify-content: right;
+    justify-content: flex-end;
 }
 
 /* --- */
@@ -97,7 +97,7 @@ h1,h2,h3{
 }
 
 .main-container h1{
-    font-size: 300%;
+    font-size: 3rem;
     line-height: 4rem;
    
 }
@@ -123,7 +123,7 @@ h1,h2,h3{
 }
 
 .about-title {
-    font-size: 200%;
+    font-size: 2em;
     color: #EDED14;
     height: auto;
     width: auto;
@@ -149,8 +149,8 @@ h1,h2,h3{
 
 .about-content{
     color: #AAA7A2;
-    line-height: 200%;
-    font-size: 150%;
+    line-height: 2em;
+    font-size: 1.5em;
 
 }
 
@@ -171,12 +171,12 @@ h1,h2,h3{
     grid-template-columns: repeat(2,1fr);
     width: 100%;
     height: auto;
-    font-size: 80%;
+    font-size: 0.8em;
     gap: 2vw;
 }
 
 .skill-title{
-    font-size: 150%;
+    font-size: 1.5em;
     text-decoration-line: underline;
     text-decoration-thickness: 1px;
 }
@@ -192,7 +192,7 @@ h1,h2,h3{
     height: 20px;
     width: auto;
     z-index: 5;
-    font-size: 160%;
+    font-size: 1.6rem;
     transform: translateY(2vh);
 }
 
@@ -425,12 +425,12 @@ h1,h2,h3{
     position: relative;    
 }
 .contact-title h1{
-    font-size: 400%;
+    font-size: 4rem;
     color:#FFD2FF;
 }
 .contact-info h2 {
     margin-bottom: 2vh;
-    font-size: 150%;
+    font-size: 1.5rem;
 }
 
 
@@ -497,7 +497,6 @@ h1,h2,h3{
     position:sticky;
     top:8vh;
     height: 92vh;
-    /* border: #323F2F solid 1px; */
 }
 
 
@@ -509,14 +508,12 @@ h1,h2,h3{
     will-change: transform;
 }
 
-.headerTest{
+/* .headerTest{
     height: 8vh;
     background-color: #323F2F;
     position: absolute;
 
-}
-
-
+} */
 
 .scrollNotice{
     position: absolute;
@@ -540,19 +537,8 @@ h1,h2,h3{
 
 .project h3 {
     overflow: hidden;
-    font-size: 250%;
+    font-size: 2.7rem;
 }
-/* 
-.doorCarousel{
-    background-color: #AAA7A2;
-    width: auto;
-    height: 80vh;
-    position: absolute;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap:10vw;
-} */
 .doorImage{
     width: 20vw;
     height: auto;
@@ -706,7 +692,7 @@ h1,h2,h3{
 }
 .progressTitle,
 .reflectionTitle{
-    font-size: 250%;
+    font-size: 2.5rem;
 }
 
 .reflectionText{
@@ -729,7 +715,7 @@ h1,h2,h3{
 .projectTitle{
     z-index: 100;
     color: black;
-    font-size: large;
+    font-size: 1.5rem;
 }
 
 .materialListContent{
@@ -771,7 +757,7 @@ h1,h2,h3{
     width: 100vw;
    text-align: center;
     position:fixed;
-    font-size: 150%;
+    font-size: 1.5rem;
     transition: ease;
     display: none;
     color: #EDED14;
@@ -829,4 +815,123 @@ h1,h2,h3{
   .nameGif:hover{
     transform: scale(1.1);
 
+  }
+
+  @media (max-width: 768px){
+    body{
+        width: 100vw;
+    }
+    .header{
+        font-size: 0.5rem;
+        width: 100vw;
+        position: fixed;
+        z-index: 100;
+    }
+    .headerHome{
+        display: none;
+    }
+   
+    .main-container {  
+        height: auto;  
+        display: grid;  
+        grid-template-columns: 1fr;  
+        grid-template-rows: repeat(3);  
+        gap: 8vh;
+    }  
+
+    .hello-text{
+        height: auto;
+        max-height: fit-content;
+        max-width: 70vw;
+    }
+
+    .intro-text{
+        max-width: 80vw;
+        place-self: end;
+    }
+
+    .footer {
+        position: relative;
+        width: 100%;
+        display: none;
+
+    }
+    .page-container{
+       min-height: auto;
+        position: absolute
+
+    }
+    .fineprint{
+        text-align: end;
+        max-width: 80vw;
+        margin-top: 5vh;
+    }
+    .contact-title h1{
+        font-size: 2.5em;
+    }
+    .contact-info h2{
+        font-size: 1.3em;
+
+    }
+    .sticky {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        overflow: hidden;
+    }
+
+    #doorContainer {
+        flex-direction: column;
+        height: 100vh; 
+        width: 100vw;
+        overflow-y: auto; 
+        overflow-x: hidden; 
+        align-items: center;
+        top: 8vh;
+    }
+    
+    .eachDoor {
+        min-height: 50vh; /* Make each door smaller */
+    }
+    .thumbnailContainer{
+        display: block;
+        position: absolute;
+        padding-top: 10vh;
+    }
+    .doorImage {
+        width: 70vw; /* Adjust image size */
+        display: none;
+    }
+
+    #project-info-container{
+        margin-top: 8vh;
+    }
+    .projectThumbnail{
+        width: 80%;
+        height: auto;
+    
+    }
+    .thumbnailContainer{
+        height: fit-content;
+        position: relative;
+    }
+
+    .project{
+        place-self: center;  
+        text-align: center;
+       position:absolute;
+       margin-top: 0;
+       padding-bottom: 17vh;
+    }
+    
+    .thumbnailPic {
+        width: 60vw; /* Make thumbnails larger */
+        max-height: 20vh; /* Keep them balanced */
+    }
+    
+    .projectDiv {
+        margin-top: 5vh !important; /* Override JS styling */
+    }
   }
