--- a/style.css
+++ b/style.css
@@ -56,8 +56,9 @@ h1{
     width: 100vw;
     position: absolute;
     transition: background-color 0.5s ease;
-    background-color: #F9F7F2;
     z-index: 10;
+    background-color: #F9F7F2;
+
 }
 
 .headerPlaceHolder{
@@ -196,7 +197,16 @@ h1{
     text-decoration-line: underline;
     text-decoration-thickness: 1px;
 }
+#profile{
+    display: flex;
+    gap: 2vw;
+}
 
+#photoCaption{
+    font-size: 0.9rem;
+    align-self: flex-end; 
+    color: #EDED14;
+}
 #profilePic{
     width: 40%;
     border-radius: 15px;
@@ -891,7 +901,6 @@ h1{
   }
 
   #projects-container{
-    background-color: #F9F7F2;
     min-height: 92vh;
     height: auto;
     display: flex;
@@ -1001,7 +1010,6 @@ h1{
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
 
